traces/bug_712.txt
src/fflib/lgmesh.cpp:1260: error: DEAD_STORE
  The value written to &cas (type _Bool) is never used.
Showing all 1 steps of the trace


src/fflib/lgmesh.cpp:1260:7: Write of unused value
1258.          bool c11= (i==nx-1) && (j==ny-1);
1259.     	 
1260.         bool cas = true;
              ^
1261.         switch (flags)
1262.          {
